sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:19: error: value &&! is not a member of Boolean
}while(!plusPetit(1,2)&&!plusPetit(0,1))
                      ^